--- a/app/src/main/res/layout/d1.xml
+++ b/app/src/main/res/layout/d1.xml
@@ -7,13 +7,15 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     >
+
     <RelativeLayout
         android:id="@+id/fotter"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:layout_alignParentBottom="true"
         android:background="#666666"
         android:gravity="center">
+
         <LinearLayout
             android:id="@+id/homesetFotterD1"
             android:layout_width="wrap_content"
@@ -23,19 +25,23 @@
             android:layout_alignParentTop="true"
             android:clickable="true"
             android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="match_parent"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#666666"
                 app:srcCompat="@drawable/icon_tab_bar_home" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="Home"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/inputsetFotterD1"
             android:layout_width="wrap_content"
@@ -44,6 +50,7 @@
             android:layout_toRightOf="@+id/homesetFotterD1"
             android:clickable="true"
             android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/imageButton2"
                 android:layout_width="match_parent"
@@ -51,6 +58,7 @@
                 android:layout_gravity="center_horizontal"
                 android:background="#666666"
                 app:srcCompat="@drawable/icon_tab_bar_input" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,6 +67,7 @@
                 android:text="入力"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/yoyakusetFotterD1"
             android:layout_width="wrap_content"
@@ -66,19 +75,22 @@
             android:layout_centerHorizontal="true"
             android:clickable="true"
             android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/imageButton3"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#666666"
                 app:srcCompat="@drawable/icon_tab_bar_view" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="予定／履歴"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/hospitalSetFotterD1"
             android:layout_width="wrap_content"
@@ -87,13 +99,15 @@
             android:layout_toRightOf="@+id/yoyakusetFotterD1"
             android:clickable="true"
             android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#666666"
                 app:srcCompat="@drawable/icon_tab_bar_search" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,6 +116,7 @@
                 android:text="病院検索"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/mypagesetFotterD1"
             android:layout_width="wrap_content"
@@ -109,13 +124,15 @@
             android:layout_alignParentRight="true"
             android:clickable="true"
             android:orientation="vertical">
+
             <ImageButton
                 android:id="@+id/imageButton5"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="#666666"
                 app:srcCompat="@drawable/icon_tab_bar_mypage" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
