--- a/app/src/main/res/layout/f4_input.xml
+++ b/app/src/main/res/layout/f4_input.xml
@@ -235,8 +235,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView14"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="75dp"
+                android:layout_marginRight="75dp"
+                android:layout_marginTop="0dp"
+                android:adjustViewBounds="true"
                 android:clickable="true"
                 app:srcCompat="@android:drawable/screen_background_dark_transparent" />
         </RelativeLayout>
