--- a/app/src/main/res/layout/e3_input.xml
+++ b/app/src/main/res/layout/e3_input.xml
@@ -116,10 +116,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/eraseDataE3"
-                android:layout_marginTop="44dp">
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="44dp"
+                android:layout_marginBottom="30dp">
 
                 <TextView
                     android:id="@+id/cancelE3"
