--- a/app/src/main/res/layout/c3.xml
+++ b/app/src/main/res/layout/c3.xml
@@ -272,8 +272,8 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginTop="10sp"
                     android:text="住所"
                     android:textColor="#666666" />
@@ -286,46 +286,88 @@
                     android:background="#BCBCBC"
                     android:hint="東京都〇〇区" />
 
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="10sp"
+                    android:text="電話番号"
+                    android:textColor="#666666" />
+
+                <EditText
+                    android:id="@+id/telE10N1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10sp"
+                    android:background="#BCBCBC"
+                    android:hint="09012345678"
+                    android:inputType="phone"
+                    tools:hint="09012345678" />
+
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="10sp"
+                    android:text="病名"
+                    android:textColor="#666666" />
+
+                <Spinner
+                    android:id="@+id/cancerTypeE10N"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView17"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="10sp" />
+
+                <RelativeLayout
+                    android:id="@+id/userinfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cancerTypeE10N"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp">
+
+                    <TextView
+                        android:id="@+id/cancelE10_N1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="10sp"
+                        android:background="@drawable/button_round_white"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="  キャンセル  "
+                        android:textColor="#0CBBB6"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/saveE10_N1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginLeft="10sp"
+                        android:layout_marginRight="30dp"
+                        android:background="@drawable/button_round"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="　保存　"
+                        android:textColor="#FFFFFF"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/zipcode_detail"
-                android:layout_marginTop="44dp">
-
-                <TextView
-                    android:id="@+id/cancelE10_N1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="10sp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_round_white"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:text="  キャンセル  "
-                    android:textColor="#0CBBB6"
-                    android:textSize="18sp"
-                    tools:name="キャンセル" />
-
-                <TextView
-                    android:id="@+id/addE10_N1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="20sp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_round"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:text="　保存　"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
-            </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
