がん種別選択を画面作成

--- a/app/src/main/res/layout/b0_cancertypeselect.xml
+++ b/app/src/main/res/layout/b0_cancertypeselect.xml
@@ -30,7 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="461dp"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:layout_marginStart="0dp">
 
 
         <TableLayout
@@ -86,7 +87,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginTop="3dp">
 
             </TableRow>
@@ -95,15 +96,12 @@
 
         <Spinner
             android:id="@+id/cancerTypeList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="335dp"
+            android:layout_height="34dp"
             android:layout_above="@+id/buttonSetCancerType"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="282dp"
-            android:layout_marginBottom="76dp"
-            android:background="@android:drawable/list_selector_background"
+            android:layout_marginStart="23dp"
+            android:layout_marginBottom="60dp"
             android:dropDownWidth="match_parent" />
 
         <Button
@@ -114,7 +112,6 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="149dp"
             android:layout_marginBottom="44dp"
-            android:background="@drawable/common_google_signin_btn_icon_light_focused"
             android:onClick="onClick"
             android:text="設定"
             android:visibility="visible" />
