--- a/app/src/main/res/layout/b0_cancertypeselect.xml
+++ b/app/src/main/res/layout/b0_cancertypeselect.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFEFEFEF">
     <!--tools:context="com.example.project.d1import">-->
+
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -96,25 +97,29 @@
 
         <Spinner
             android:id="@+id/cancerTypeList"
-            android:layout_width="335dp"
-            android:layout_height="34dp"
+            android:layout_width="299dp"
+            android:layout_height="52dp"
             android:layout_above="@+id/buttonSetCancerType"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="23dp"
-            android:layout_marginBottom="60dp"
+            android:layout_marginStart="43dp"
+            android:layout_marginBottom="67dp"
             android:dropDownWidth="match_parent" />
 
-        <Button
+        <TextView
             android:id="@+id/buttonSetCancerType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="149dp"
-            android:layout_marginBottom="44dp"
-            android:onClick="onClick"
-            android:text="設定"
-            android:visibility="visible" />
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="121dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/button_round"
+            android:gravity="center"
+            android:text="　　選択　　"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
     </RelativeLayout>
 
 </RelativeLayout>
