--- a/app/src/main/res/layout/c3.xml
+++ b/app/src/main/res/layout/c3.xml
@@ -56,9 +56,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/header"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="0dp"
         android:visibility="visible">
 
         <RelativeLayout
@@ -69,8 +72,8 @@
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="10sp">
 
@@ -78,11 +81,11 @@
                     android:id="@+id/avaterUserE10N1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="false"
                     android:layout_alignParentStart="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentTop="false"
-                    android:layout_centerHorizontal="true"
                     android:layout_centerInParent="false"
+                    android:layout_centerHorizontal="true"
                     android:layout_centerVertical="false"
                     android:src="@drawable/icon_user" />
 
@@ -92,9 +95,9 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/relativeLayout"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10sp"
                 android:text="氏名※"
                 android:textColor="#666666" />
@@ -103,9 +106,9 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:orientation="horizontal">
 
                 <EditText
@@ -139,9 +142,9 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/linearLayout"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10sp"
                 android:layout_marginTop="10sp"
                 android:text="生年月日※"
@@ -151,9 +154,9 @@
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView2"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -185,9 +188,9 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/linearLayout2"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10sp"
                 android:layout_marginTop="10sp"
                 android:text="性別※"
@@ -197,30 +200,30 @@
                 android:id="@+id/sexE10N1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/textView3"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10sp"
                 android:layout_marginRight="10sp" />
 
             <LinearLayout
                 android:id="@+id/zipcode_detail"
-                android:layout_width="match_parent"
+                android:layout_width="401dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/sexE10N1"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
                 android:layout_marginTop="10sp"
+                android:layout_marginRight="10sp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:text="郵便番号"
                     android:textColor="#666666" />
@@ -228,9 +231,9 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_below="@id/textView6"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="10sp"
                     android:orientation="horizontal">
@@ -342,14 +345,16 @@
                         android:id="@+id/cancelE10_N1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
                         android:layout_marginLeft="30dp"
+                        android:layout_marginTop="0dp"
                         android:layout_marginRight="10sp"
                         android:background="@drawable/button_round_white"
                         android:clickable="true"
                         android:gravity="center"
                         android:text="  キャンセル  "
                         android:textColor="#0CBBB6"
-                        android:textSize="18sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/saveE10_N1"
@@ -361,9 +366,9 @@
                         android:background="@drawable/button_round"
                         android:clickable="true"
                         android:gravity="center"
-                        android:text="　保存　"
+                        android:text="　　登録　　"
                         android:textColor="#FFFFFF"
-                        android:textSize="18sp" />
+                        android:textSize="24sp" />
                 </RelativeLayout>
 
             </LinearLayout>
