--- a/app/src/main/res/layout/a2.xml
+++ b/app/src/main/res/layout/a2.xml
@@ -1,72 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:src="@drawable/logo_large_bg"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@id/logo_large_bg"
-        android:layout_marginTop="20dp" />
-    <ImageView
-        android:src="@drawable/image_tutrial2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image_tutrial2" />
-    <ImageView
-        android:src="@drawable/text_tutrial2_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_tutrial2_1" />
-    <ImageView
-        android:src="@drawable/text_tutrial2_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_tutrial2_2" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
+            android:id="@id/logo_large_bg"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_gray" />
+            android:layout_marginTop="20dp"
+            android:src="@drawable/logo_large_bg" />
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="11.34dp"
-            android:layout_marginRight="11.34dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_green" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_gray" />
-    </LinearLayout>
-    <TextView
-        android:gravity="center"
-        android:height="16dp"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/image_tutrial2"
         android:layout_width="match_parent"
-        android:lineSpacingMultiplier="1.50"
-        android:text="SKIP &gt;"
-        android:width="53dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="top"
-        android:clickable="true"
-        android:id="@+id/skipA2" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logo_large_bg"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:src="@drawable/image_tutrial2" />
+
+    <ImageView
+        android:id="@+id/text_tutrial2_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_tutrial2"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="20dp"
+        android:src="@drawable/text_tutrial2_1" />
+
+    <ImageView
+        android:id="@+id/text_tutrial2_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_tutrial2_1"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="20dp"
+        android:src="@drawable/text_tutrial2_2" />
+
+</RelativeLayout>
