--- a/app/src/main/res/layout/a3.xml
+++ b/app/src/main/res/layout/a3.xml
@@ -1,70 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/logo_large_bg"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/logo_large_bg" />
-    <ImageView
-        android:src="@drawable/image_tutrial3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/image_tutrial3" />
-    <ImageView
-        android:src="@drawable/text_tutrial3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_tutrial3" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/logo_large_bg"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_gray" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/logo_large_bg" />
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="11.34dp"
-            android:layout_marginRight="11.34dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_gray" />
+    <ImageView
+        android:id="@+id/image_tutrial3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logo_large_bg"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:src="@drawable/image_tutrial3" />
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/dot_green" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/text_tutrial3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_tutrial3"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="20dp"
+        android:src="@drawable/text_tutrial3" />
+
     <TextView
-        android:text="今すぐ会員登録"
+        android:id="@+id/skipA3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/skipA3"
-        android:background="@drawable/button_round"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="20dp"
-        android:layout_marginRight="37.0dp"
+        android:layout_below="@+id/text_tutrial3"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="37dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#FFFFFF" />
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="37.0dp"
+        android:background="@drawable/button_round"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="今すぐ会員登録"
+        android:textColor="#FFFFFF"
+        android:textSize="20dp" />
 
-</LinearLayout>
+</RelativeLayout>
