--- a/app/src/main/res/layout/a4.xml
+++ b/app/src/main/res/layout/a4.xml
@@ -48,29 +48,33 @@
         android:textColor="#FFFFFFFF"
         android:textSize="12sp"
         android:layout_marginTop="20dp" />
+
     <TextView
-        android:text="同意して登録する"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/btnRegNewUser_A4"
-        android:background="@drawable/button_round_white"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="20dp"
-        android:layout_marginRight="37.0dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#0CBBB6" />
-    <TextView
-        android:text="ログイン画面"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toLoginDisp_A4"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="12dp"
-        android:layout_marginRight="37.0dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="20dp"
-        android:textColor="#FFFFFFFF" />
+        android:layout_marginRight="37.0dp"
+        android:background="@drawable/button_round_white"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="同意して登録する"
+        android:textColor="#0CBBB6"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/toLoginDisp_A4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="37.0dp"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="5dp"
+        android:text="ログイン画面"
+        android:textColor="#FFFFFFFF"
+        android:textSize="12dp" />
 </LinearLayout>
