--- a/app/src/main/res/layout/a7.xml
+++ b/app/src/main/res/layout/a7.xml
@@ -36,17 +36,19 @@
         android:width="144dp"
         android:textColor="#FFFFFF"
         android:textSize="12sp" />
+
     <TextView
-        android:text="はじめる"
+        android:id="@+id/buttonLoginB5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonLoginB5"
-        android:background="@drawable/button_round_white"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="20dp"
-        android:layout_marginRight="37.0dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="20dp"
-        android:textColor="#0CBBB6" />
+        android:layout_marginRight="37.0dp"
+        android:background="@drawable/button_round_white"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="はじめる"
+        android:textColor="#0CBBB6"
+        android:textSize="20dp" />
 </LinearLayout>
