--- a/app/src/main/res/layout/a9.xml
+++ b/app/src/main/res/layout/a9.xml
@@ -33,30 +33,34 @@
         android:background="#21000000"
         android:hint="メールアドレス"
         android:layout_marginTop="20dp" />
+
     <TextView
-        android:text="パスワード再設定メール送信"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/sendmailForget"
-        android:background="@drawable/button_round_white"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="20dp"
-        android:layout_marginRight="37.0dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#0CBBB6" />
-    <TextView
-        android:text="ログイン画面に戻る"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/backForget"
-        android:background="@drawable/button_round_white"
-        android:gravity="center_horizontal"
-        android:clickable="true"
-        android:textSize="20dp"
-        android:layout_marginRight="37.0dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="20dp"
-        android:textColor="#0CBBB6" />
+        android:layout_marginRight="37.0dp"
+        android:background="@drawable/button_round_white"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="7dp"
+        android:text="パスワード再設定メール送信"
+        android:textColor="#0CBBB6"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/backForget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="37dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="37.0dp"
+        android:background="@drawable/button_round_white"
+        android:clickable="true"
+        android:gravity="center_horizontal"
+        android:padding="7dp"
+        android:text="ログイン画面に戻る"
+        android:textColor="#0CBBB6"
+        android:textSize="20dp" />
 </LinearLayout>
